package NYdo;

option optimize_for = SPEED;


message TYdoHistoryItem {
    required string ClickedWorkerId = 1;
    required int64 LastTimestamp = 2;
    required int64 ClicksCount = 3;
}

message TYdoHistory {
    map<string, TYdoHistoryItem> UidToData = 1;
}

message TYdoOnlinePersonal {
    required int64 LastTimestamp = 1;
}

message TYdoOnlinePersonalGrouped {
    map<string, TYdoOnlinePersonal> UidToData = 1;
}

message TYdoOrderViewAction {
    required string OrderId = 1;
    required string WorkerId = 2;
    required int64 LastTimestamp = 3;
    optional string Uid = 4;
}

message TYdoOrderViewTimestamp {
    required int64 LastTimestamp = 1;
}

message TYdoOrderViewsCount {
    required int64 Count = 1;
}

message TYdoConnect {
    required string Uid = 1;
    required string WorkerId = 2;
    required int64 LastTimestamp = 3;

    enum EConnectType {
        PHONE = 0;
        CHAT = 1;
        ORDER = 2;
        CLIENT_PHONE = 3;
    }
    required EConnectType Type = 4;

    optional string Puid = 5;
    optional string Icookie = 6;

    optional string SearchRubricId = 7;
    optional string SearchText = 8;
    optional string ReqId = 9;
    optional string Source = 10;
    optional string OrderId = 11;

    enum EChatType {
        MESSENGER = 0;
        WHATSAPP = 1;
        TELEGRAM = 2;
        VIBER = 3;
    }

    optional EChatType ChatType = 12;

    enum EPageType {
        PAGE_TYPE_SEARCH = 0;
        PAGE_TYPE_PROFILE = 1;
        PAGE_TYPE_MY_ORDER = 2;
        PAGE_TYPE_ORDER = 3;
        PAGE_TYPE_ORDERS = 4;
    }

    optional EPageType PageType = 13;
}
